@@ -58,35 +58,10 @@ dependencies {
   // Spark doesn't include Avro support by default, so need to bring this in.
   implementation "org.apache.spark:spark-avro_2.12:3.5.3"
 
-  testImplementation("com.marklogic:marklogic-junit5:1.5.0") {
-    // Use the Java Client in the connector jar.
-    exclude module: "marklogic-client-api"
-  }
-
-  // Used for tests involving JDBC. Spring JDBC greatly simplifies executing SQL queries.
-  testImplementation "org.springframework:spring-jdbc:5.3.39"
-  testImplementation "org.postgresql:postgresql:42.7.4"
+  testImplementation project(":flux-tests-api")
 
   // For testing custom commands with a 3rd party connector.
   testImplementation "com.databricks:spark-xml_2.12:0.18.0"
-
-  // For configuring two-way SSL in tests.
-  testImplementation("com.marklogic:ml-app-deployer:5.0.0") {
-    // Use the Java Client in the connector jar.
-    exclude module: "marklogic-client-api"
-  }
-
-  // Using Apache HttpClient for connecting to the MarkLogic Manage API.
-  testImplementation 'org.apache.httpcomponents:httpclient:4.5.14'
-  // Forcing HttpClient to use this to address https://snyk.io/vuln/SNYK-JAVA-COMMONSCODEC-561518 .
-  testImplementation 'commons-codec:commons-codec:1.17.1'
-
-  // The Gradle docs - https://docs.gradle.org/current/userguide/cross_project_publications.html#sec:simple-sharing-artifacts-between-projects -
-  // are not keen on this practice of depending on another project's configuration. But this seems fine for a test
-  // dependency, and testing has shown that Gradle will construct each project's shadowJar if it does not already exist.
-  testImplementation project(path: ":flux-embedding-model-minilm", configuration: "shadow")
-  testImplementation project(path: ":flux-embedding-model-azure-open-ai", configuration: "shadow")
-  testImplementation project(path: ":flux-embedding-model-ollama", configuration: "shadow")
 
   shadowDependencies "com.marklogic:marklogic-spark-connector:2.5.1"
   shadowDependencies "info.picocli:picocli:4.7.6"
@@ -217,20 +192,6 @@ buildToolForGettingStarted.dependsOn installDist
 
 test {
   finalizedBy jacocoTestReport
-  jvmArgs = [
-    // Needed for all Java 17 testing.
-    "--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED",
-
-    // For Spark's SerializationDebugger when using Java 17. See ReprocessTest for one example of why this is needed.
-    "--add-opens", "java.base/sun.security.action=ALL-UNNAMED",
-
-    // Needed by the JDBC tests.
-    "--add-opens", "java.base/sun.util.calendar=ALL-UNNAMED",
-
-    // Needed by CustomImportTest
-    "--add-opens", "java.base/java.io=ALL-UNNAMED",
-    "--add-opens", "java.base/sun.nio.cs=ALL-UNNAMED"
-  ]
 }
 
 jacocoTestReport {
